--- a/injs.html
+++ b/injs.html
@@ -92,7 +92,7 @@
      </div>
 
      <div class="card" style="width: 17rem;">
-        <iframe class="card-img-top" id="card-img" src="tps://drive.google.com/file/d/1JIDniWnrlp7YXOXiCeqc_0hmYQ9Rq4Be/preview" allow="autoplay" allowfullscreen></iframe>
+        <iframe class="card-img-top" id="card-img" src="https://drive.google.com/file/d/1JIDniWnrlp7YXOXiCeqc_0hmYQ9Rq4Be/preview" allow="autoplay" allowfullscreen></iframe>
         <div class="card-body">
             <h6 class="card-text">2 Control Statements_ Using If-Else Conditionals & Logic</h6>
             <div class="st"> 
