--- a/index.html
+++ b/index.html
@@ -652,6 +652,21 @@
                                 <a href="38token.html" class="btn btn-outline-secondary">Start Learning</a>
                             </div>
                         </div>
+                        
+                         <div class="card" style="width: 17rem;">
+                            <img  src="power bi.png" class="card-img-top" id="card-img" alt="..." >
+                            <div class="card-body">
+                                <h6 class="card-text">Complete Power-Bi course</h6>
+                                <div class="st"> 
+                                    &starf;
+                                    &bigstar;
+                                    &bigstar;
+                                    &bigstar;
+                                    &bigstar; 
+                                </div>
+                                <a href="Powe-Bi.html" class="btn btn-outline-secondary">Start Learning</a>
+                            </div>
+                        </div>
 
                         <div class="card" style="width: 17rem;">
                             <img src="nft.jpg" class="card-img-top" id="card-img" alt="...">
